# weightr-backend

./: .gitignore  DevSetup.md  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run.sh
.github/workflows/: cicd.yml
conf/: prometheus-deployment.yaml  prometheus.yml
conf/helm/: values-dev.yaml
conf/logging/: dev.docker.yaml  prod.yaml
conf/prometheus/: promtail.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  hostpath-pv.yaml  hostpath-pvc.yaml  ingress.yaml  service.yaml
helm/values/: values-prod.yaml
k8s/: deployment.yaml  hostpath-pv.yaml  hostpath-pvc.yaml  ingress.yaml  middleware.yaml
k8s-infra/: redis-values.yaml
k8s-k3d/: config.yaml
scripts/: configure.sh  destroy-k3d.sh  dev-k3d.sh  infra.sh  k3d.sh  run.sh
src/: conf.py  main.py  models.py  session.py
src/weightr_backend/: conf.py  main.py  models.py  session.py
test/: conftest.py
test/integration/: test_refresh_with_mocked_http.py  test_session_manager_with_redis.py
test/unit/: test_endpoints.py  test_session_manager.py
var/conf/weightr-backend/: .env.dev  .env.dev.docker  .env.dev.docker.template  .env.dev.template
