[project]
name = "weightr-backend"
version = "0.1.0"
description = "Backend for weight-tracking app"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Eric Melz", email = "eric@emelz.com"}
]
dependencies = [
    "redis>=5.2.1",
    "fastapi==0.115.12",
    "httpx>=0.28.1",
    "uvicorn==0.34.0",
    "pydantic-settings==2.8.1",
    "pyyaml==6.0.2",
    "python-json-logger==3.3.0",
    "prometheus-fastapi-instrumentator==7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio==0.26.0",
    "coverage==7.8.0",
    "pytest-cov==6.1.1",
    "testcontainers>=4.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "pytest-asyncio==0.26.0",
    "coverage==7.8.0",
    "pytest-cov==6.1.1",
    "testcontainers>=4.10.0",
]
